# mockflare

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
app/: config.py  database.py  dependencies.py  dns_server.py  main.py  models.py  schemas.py  seed.py
app/routes/: custom_hostnames.py  dns_records.py  mockflare.py  zones.py
app/static/: app.js  index.html  style.css
tests/: conftest.py  test_custom_hostnames.py  test_dns_records.py  test_dns_server.py  test_mockflare.py  test_zones.py
